# ratatui-crossterm-template

./: Cargo.toml  README.md
src/: main.rs
