[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", default-features = false, features = ["events"] }
ratatui = { version = "0.26.1", default-features = false, features = ["crossterm"] }
